# lms

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
apps/os_lms/: CLAUDE.md  pyproject.toml
apps/os_lms/os_lms/: __init__.py  auth.py  badge_utils.py  debug.py  hooks.py  modules.txt  patches.txt  requirements.txt  setup.py
apps/os_lms/os_lms/data_import/: course.py  enrollment.py  utility.py
apps/os_lms/os_lms/events/: certificate.py  lesson.py
apps/os_lms/os_lms/fixtures/: custom_field.json
apps/os_lms/os_lms/os_lms/: api.py  branding.py  google_calendar.py  live_class_reminders.py  override_api.py  override_utils.py  ovverride_api.py  utils.py
apps/os_lms/os_lms/os_lms/ai/: __init__.py  api.py  ingestion.py  ingestion_service.py  scheduler.py
apps/os_lms/os_lms/os_lms/ai/utils/: file_transcriber.py  lesson_parser.py  (+4 more)
apps/os_lms/os_lms/os_lms/app/: api.py
apps/os_lms/os_lms/os_lms/trueskills/: api.py  client.py  service.py  settings.py
apps/os_lms/os_lms/overrides/: data_import.py  email_account.py  lms_live_class.py  smtp.py  sqlite.py
apps/os_lms/os_lms/patches/v0_0_2/: rename_lms_os_course_tag.py
apps/os_lms/os_lms/public/css/: os_lms.css  welcome_video.css
apps/os_lms/os_lms/public/js/: os_lms.js  welcome_video.js
apps/os_lms/os_lms/templates/: base.html
apps/os_lms/os_lms/templates/emails/: live_class_cancelled.html  live_class_invitation.html  live_class_reminder.html  login_with_email_link.html
apps/os_lms/os_lms/translations/: it.csv
apps/os_lms/os_lms/www/: login.html  me.html  me.py  update-password.html
(+241 files in other folders)
